--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,29 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "name": "Webflow Extension",
+  "build": {
+		"dockerfile": "Dockerfile"
+	},
   "features": {
-    "ghcr.io/devcontainers/features/desktop-lite:1": {
-      "version": "latest",
-      "noVncVersion": "1.2.0",
-      "password": "vscode",
-      "webPort": "6080",
+  	"ghcr.io/devcontainers/features/desktop-lite:1": {
+  	  "version": "latest",
+  		"noVncVersion": "1.2.0",
+  		"password": "vscode",
+  		"webPort": "6080",
   		"vncPort": "5901"
-    }
+  	}
+  },
+  "forwardPorts": [6080, 5901],
+  "portsAttributes": {
+  	"6080": {
+  		"label": "VNC web client (noVNC)",
+  		"onAutoForward": "silent"
+  	},
+  	"5901": {
+  		"label": "VNC TCP port",
+  		"onAutoForward": "silent"
+  	}
+  },
+  "hostRequirements": {
+	  "memory": "9gb"
   }
 }
