--- a/designer-extension/package.json
+++ b/designer-extension/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
+    "ext:serve": "webflow extension serve",
     "ext:dev": "nodemon --watch src --ext ts,vue --exec 'npm run build && webflow extension serve'",
     "ext:bundle": "webflow extension bundle"
   },
@@ -14,10 +15,12 @@
     "vue": "^3.5.10"
   },
   "devDependencies": {
+    "@types/node": "^22.7.5",
     "@vitejs/plugin-vue": "^5.1.4",
     "@webflow/designer-extension-typings": "^2.0.2",
     "@webflow/webflow-cli": "^1.6.12",
     "axios": "^1.7.7",
+    "get-port": "^7.1.0",
     "nodemon": "^3.1.7",
     "typescript": "^5.5.3",
     "vite": "^5.4.8",
